[gd_scene load_steps=33 format=3 uid="uid://du070s65sog85"]

[ext_resource type="Script" path="res://characters/npc_cat.gd" id="1_q38yk"]
[ext_resource type="Texture2D" uid="uid://bclhhrud3oyv3" path="res://art/Characters/Basic Charakter Spritesheet.png" id="2_e5wkm"]
[ext_resource type="PackedScene" uid="uid://ri4vqebv4pev" path="res://game_components/interact_area.tscn" id="3_jtclm"]
[ext_resource type="FontFile" uid="uid://byvtmedlwtuey" path="res://game_components/cmuntt.ttf" id="3_x6wy7"]
[ext_resource type="Script" path="res://game_components/bark_text.gd" id="4_f4100"]
[ext_resource type="Script" path="res://game_components/db/dialogue_handler.gd" id="6_nst5c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b58jl"]
size = Vector2(12, 6)

[sub_resource type="Animation" id="Animation_gh8oh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2feeh"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_67sa4"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_vwtjp"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_ahay3"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_a1o84"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_m0top"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_0afwb"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_adty3"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfrs1"]
_data = {
"RESET": SubResource("Animation_gh8oh"),
"idle_down": SubResource("Animation_2feeh"),
"idle_left": SubResource("Animation_67sa4"),
"idle_right": SubResource("Animation_vwtjp"),
"idle_up": SubResource("Animation_ahay3"),
"walk_down": SubResource("Animation_a1o84"),
"walk_left": SubResource("Animation_m0top"),
"walk_right": SubResource("Animation_0afwb"),
"walk_up": SubResource("Animation_adty3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u0xrr"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p0v6x"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jto2i"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pin5m"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n174s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u0xrr")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p0v6x")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jto2i")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_pin5m")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7wppf"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1q318"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0q65b"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a68cx"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p1637"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7wppf")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1q318")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0q65b")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_a68cx")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8x2c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cepq1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_opmqw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f7ppk"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_n174s")
states/Idle/position = Vector2(351.029, 105)
states/Start/position = Vector2(136, 105)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_p1637")
states/Walk/position = Vector2(492.029, 105)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_j8x2c"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_cepq1"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_opmqw")]
graph_offset = Vector2(-545.971, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rosd"]
size = Vector2(20, 21)

[node name="NPC_Cat" type="CharacterBody2D"]
position = Vector2(0, -8)
script = ExtResource("1_q38yk")
bark_frequency = 0.5
_bark_list = Array[String](["meow...", "Kwhy is it always so bright outside?", "kwI really need to get akway sometime...", "This kused to be such a knice area*", "*ouch!* Not another thorn!...", "", ""])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e5wkm")
hframes = 4
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_b58jl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kfrs1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_f7ppk")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(-0.00105822, 0.986128)
parameters/Walk/blend_position = Vector2(0.344974, 0.211801)

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="InteractionComponents"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionArea"]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7rosd")

[node name="DialogueText" type="Label" parent="InteractionComponents"]
offset_left = -72.0
offset_top = -24.0
offset_right = 478.0
offset_bottom = 2.0
scale = Vector2(0.260058, 0.361097)
theme_override_colors/font_color = Color(0.462745, 0.0901961, 0.623529, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x6wy7")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BarkText" type="Label" parent="InteractionComponents"]
offset_left = -52.0
offset_top = -17.0
offset_right = 325.0
offset_bottom = 4.0
scale = Vector2(0.273316, 0.365478)
theme_override_colors/font_color = Color(0.345098, 0.933333, 0.780392, 0.619608)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.584314)
theme_override_fonts/font = ExtResource("3_x6wy7")
horizontal_alignment = 1
script = ExtResource("4_f4100")

[node name="InteractArea" parent="." instance=ExtResource("3_jtclm")]
position = Vector2(0, 1)
scale = Vector2(0.0721538, 0.105497)

[node name="Timer" type="Timer" parent="."]

[node name="DialogueHandler" type="Node" parent="."]
script = ExtResource("6_nst5c")

[connection signal="area_entered" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="attack_executed" from="InteractArea" to="." method="_on_interact_area_attack_executed"]
[connection signal="interaction_executed" from="InteractArea" to="." method="_on_interact_area_interaction_executed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
